--- a/jelastic/jelastic.conf
+++ b/jelastic/jelastic.conf
@@ -7,4 +7,5 @@ Node_Type=glassfish4
 Webroot_Path="${OPENSHIFT_GLASSFISH4_DIR}/versions/${Version}/webapps"
 Valid_Engines=java7,java8
 Reset_Password=1
+Smart_Redirect=0
 Web_Access=1
